[package]
name = "vec-arena"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v1.x.y" git tag
version = "1.2.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "A simple object arena"
repository = "https://github.com/smol-rs/vec-arena"
documentation = "https://docs.rs/vec-arena"
license = "Apache-2.0 OR MIT"
categories = ["memory-management"]
